--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/navigation_weight"
@@ -13,7 +14,7 @@
 
     <item
         android:id="@+id/navigation_stats"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@mipmap/ic_stats"
         android:title="@string/title_stats" />
 
 </menu>
