--- a/app/src/main/res/drawable/ic_glass.xml
+++ b/app/src/main/res/drawable/ic_glass.xml
@@ -4,6 +4,10 @@
     android:viewportWidth="2000"
     android:viewportHeight="2000">
   <path
+      android:fillColor = "#00000000"
+      android:pathData="M 0 0 L 2000 0 L 2000 2000 L 0 2000 L 0 0ZM 400 20 L 640 1980 L 1360 1980 L 1600 20Z"
+      android:fillType="evenOdd"/>
+  <path
       android:fillColor = "@android:color/background_light"
       android:pathData="M 0 0 L 2000 0 L 2000 2000 L 0 2000 L 0 0ZM 400 20 L 640 1980 L 1360 1980 L 1600 20Z"
       android:fillType="evenOdd"/>
