--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -19,5 +19,9 @@
         android:id="@+id/navigation_stats"
         android:icon="@mipmap/ic_stats"
         android:title="@string/title_stats" />
+    <item
+        android:id="@+id/navigation_charts"
+        android:icon="@drawable/ic_chart"
+        android:title="@string/title_charts" />
 
 </menu>
